# rsx

./: .gitignore  Cargo.toml  README.md
examples/: README.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/routing/: Cargo.toml
examples/routing/app/: app.rsx  favicon.rsx
examples/routing/src/: main.rs  routes.rs
rsx/: Cargo.toml
rsx/src/: consts.rs  favicon.rs  lib.rs  res.rs  utils.rs  webserver.rs
rsx_macros/: Cargo.toml
rsx_macros/src/: lib.rs
src/: app.rsx  lib.rs  main.rs  prelude.rs  res.rs
src/media/: favicon.rs  mod.rs
