[package]
name = "rusty_jsx"
version = "0.1.0"
edition = "2021"

[dependencies]
rsx = { path = "./rsx" }
tide = "*"

[workspace]
members = [
    # Core
    "rsx_macros",
    "rsx",

    # Examples
    "examples/routing",
    "examples/basic",
]

[[example]]
name = "routing"
path = "./examples/routing"

[[example]]
name = "basic"
path = "./examples/basic"
